[package]
name = "my_bevy_game"
version = "0.1.0"
edition = "2021"
default-run = "client"

[dependencies]
bevy = { version = "0.14.2", features = ["dynamic_linking"] }
bevy-inspector-egui = "0.26.0"
bevy-inspector-egui-rapier = { version = "0.9.0", features = ["rapier3d"] }
bevy_rapier3d = { version = "0.27.0", features = ["debug-render", "parallel", "simd-stable"] }
bevy_renet = "0.0.12"
bincode = "1.3.3"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
serde = "1.0.210"

#For public server / port forwarded servers
# public-ip = "0.2.2"
# tokio = "1.40.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

# Enable more optimization in the release profile at the cost of compile time.
[profile.release]
# Compile the entire crate as one unit.
# Slows compile times, marginal improvements.
codegen-units = 1
# Do a second optimization pass over the entire program, including dependencies.
# Slows compile times, marginal improvements.
lto = "thin"

# Optimize for size in the wasm-release profile to reduce load times and bandwidth usage on web.
[profile.wasm-release]
# Default to release profile values.
inherits = "release"
# Optimize with size in mind (also try "z", sometimes it is better).
# Slightly slows compile times, great improvements to file size and runtime performance.
opt-level = "s"
# Strip all debugging information from the binary to slightly reduce file size.
strip = "debuginfo"
